--- a/src/sample/LoginPanel.fxml
+++ b/src/sample/LoginPanel.fxml
@@ -21,8 +21,8 @@
     </ButtonBar>
     <TextField fx:id="loginTxt" layoutX="300.0" layoutY="96.0" AnchorPane.leftAnchor="80.0"
                AnchorPane.topAnchor="30.0"/>
-    <TextField fx:id="passwordTxt" layoutX="300.0" layoutY="162.0" AnchorPane.leftAnchor="80.0"
-               AnchorPane.topAnchor="80.0"/>
+    <PasswordField fx:id="passwordTxt"  layoutX="300.0" layoutY="162.0" AnchorPane.leftAnchor="80.0"
+               AnchorPane.topAnchor="80.0" />
     <Text layoutX="152.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login:"
           AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0"/>
     <Text layoutX="152.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hasło:"
