--- a/src/sample/LoginPanel.fxml
+++ b/src/sample/LoginPanel.fxml
@@ -4,28 +4,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="sample.Controller">
-    <ButtonBar fx:id="register" layoutX="300.0" layoutY="300.0" prefHeight="40.0" prefWidth="200.0"
-               AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="180.0">
+<AnchorPane fx:id="content" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+    <ButtonBar fx:id="register" layoutX="300.0" layoutY="300.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="180.0">
       <buttons>
-          <Button mnemonicParsing="false" text="Zarejestruj"/>
+          <Button mnemonicParsing="false" onMouseClicked="#loadRegister" text="Zarejestruj" />
       </buttons>
     </ButtonBar>
-    <ButtonBar fx:id="login" layoutX="300.0" layoutY="260.0" onMouseClicked="#login" prefHeight="40.0" prefWidth="200.0"
-               AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="150.0">
+    <ButtonBar fx:id="login" layoutX="300.0" layoutY="260.0" onMouseClicked="#login" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="150.0">
       <buttons>
-          <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#login" onMouseClicked="#login" text="Zaloguj"/>
+          <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#login" onMouseClicked="#login" text="Zaloguj" />
       </buttons>
     </ButtonBar>
-    <TextField fx:id="loginTxt" layoutX="300.0" layoutY="96.0" AnchorPane.leftAnchor="80.0"
-               AnchorPane.topAnchor="30.0"/>
-    <PasswordField fx:id="passwordTxt"  layoutX="300.0" layoutY="162.0" AnchorPane.leftAnchor="80.0"
-               AnchorPane.topAnchor="80.0" />
-    <Text layoutX="152.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login:"
-          AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0"/>
-    <Text layoutX="152.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hasło:"
-          AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="80.0"/>
-    <Label fx:id="errorLbl" layoutX="361.0" layoutY="200.0"/>
+    <TextField fx:id="loginTxt" layoutX="300.0" layoutY="96.0" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="30.0" />
+    <PasswordField fx:id="passwordTxt" layoutX="300.0" layoutY="162.0" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="80.0" />
+    <Text layoutX="152.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login:" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0" />
+    <Text layoutX="152.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hasło:" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="80.0" />
+    <Label fx:id="errorLbl" layoutX="361.0" layoutY="200.0" />
 </AnchorPane>
