--- a/src/sample/LoginPanel.fxml
+++ b/src/sample/LoginPanel.fxml
@@ -7,7 +7,7 @@
 <AnchorPane fx:id="content" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <ButtonBar fx:id="register" layoutX="300.0" layoutY="300.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="180.0">
       <buttons>
-          <Button mnemonicParsing="false" onMouseClicked="#loadRegister" text="Zarejestruj" />
+          <Button mnemonicParsing="false" onAction="#loadRegister" onMouseClicked="#loadRegister" text="Zarejestruj" />
       </buttons>
     </ButtonBar>
     <ButtonBar fx:id="login" layoutX="300.0" layoutY="260.0" onMouseClicked="#login" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="150.0">
