--- a/src/sample/LoginPanel.fxml
+++ b/src/sample/LoginPanel.fxml
@@ -4,15 +4,15 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="content" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
-    <ButtonBar fx:id="register" layoutX="300.0" layoutY="300.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="180.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+    <ButtonBar layoutX="300.0" layoutY="300.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="180.0">
       <buttons>
-          <Button mnemonicParsing="false" onAction="#loadRegister" onMouseClicked="#loadRegister" text="Zarejestruj" />
+          <Button fx:id="register" mnemonicParsing="false" onAction="#handleButtonEvent"  text="Zarejestruj" />
       </buttons>
     </ButtonBar>
     <ButtonBar fx:id="login" layoutX="300.0" layoutY="260.0" onMouseClicked="#login" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="150.0">
       <buttons>
-          <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#login" onMouseClicked="#login" text="Zaloguj" />
+          <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#handleButtonEvent"  text="Zaloguj" />
       </buttons>
     </ButtonBar>
     <TextField fx:id="loginTxt" layoutX="300.0" layoutY="96.0" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="30.0" />
