--- a/src/main/java/sample/ApiPanel.fxml
+++ b/src/main/java/sample/ApiPanel.fxml
@@ -10,5 +10,5 @@
     <Label fx:id="errorLbl" layoutX="361.0" layoutY="200.0" />
    <TextArea fx:id="textBody" layoutX="80.0" layoutY="86.0" prefHeight="152.0" prefWidth="149.0" />
    <Text layoutX="14.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text:" />
-   <Button fx:id="btnSend" layoutX="287.0" layoutY="217.0" mnemonicParsing="false"  text="Send" />
+   <Button fx:id="btnSend" layoutX="287.0" layoutY="217.0" mnemonicParsing="false" onAction="#handleButtonEvent" text="Send" />
 </AnchorPane>
