--- a/src/main/java/sample/scenes/LoginPanel.fxml
+++ b/src/main/java/sample/scenes/LoginPanel.fxml
@@ -10,7 +10,7 @@
           <Button fx:id="register" mnemonicParsing="false" onAction="#handleButtonEvent"  text="Zarejestruj" />
       </buttons>
     </ButtonBar>
-    <ButtonBar fx:id="login" layoutX="300.0" layoutY="260.0" onMouseClicked="#login" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="150.0">
+    <ButtonBar fx:id="login" layoutX="300.0" layoutY="260.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="150.0">
       <buttons>
           <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#handleButtonEvent"  text="Zaloguj" />
       </buttons>
